--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "marked": "^5.1.1",
     "next": "^13.4.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
