--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.0.18",
+    "@prisma/client": "^5.10.2",
     "gray-matter": "^4.0.3",
     "marked": "^12.0.0",
     "next": "^14.1.0",
@@ -26,6 +27,7 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
     "postcss": "^8.4.26",
+    "prisma": "^5.10.2",
     "tailwindcss": "^3.3.3"
   }
 }
